chore: resolve conflicts. add more StreamCodecs
Signed-off-by: SettingDust <settingdust@gmail.com>